# ya-whatsminer-cli

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  miner-conf.json  pyproject.toml  whatsminercli.py
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_core.py
whatsminer_cli/: __init__.py  cli.py  core.py
