[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ya-whatsminer-cli"
version = "0.1.0"
description = "Whatsminer API v3.0.1 CLI and Python client library"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "YA Whatsminer Maintainers"}]
dependencies = [
    "pycryptodome>=3.9",
]
keywords = ["whatsminer", "miner", "cli", "api", "bitcoin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cryptodomex = ["pycryptodomex>=3.9"]
test = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://example.com/ya-whatsminer-cli"

[project.scripts]
whatsminercli = "whatsminer_cli.cli:main"

[tool.setuptools]
packages = ["whatsminer_cli"]
